[package]
name = "lrclassifier"
version = "0.1.0"
edition = "2021"
authors = ["Brian3647 <victoris3647@gmail.com>"]
description = "A simple logistic regression classifier implementation"
include = ["Cargo.toml", "src/**.rs", "LICENSE", "README.md"]
license = "MIT"
repository = "https://github.com/Brian3647/lrclassifier"
readme = "README.md"

[dependencies]
rand = "0.8.5"
